// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBottomStyle renders 0 1`] = `
Array [
  .c0 {
  border-bottom-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomStyle renders function 1`] = `
Array [
  .c0 {
  border-bottom-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  border-bottom-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomStyle renders negative number 1`] = `
Array [
  .c0 {
  border-bottom-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-bottom-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-bottom-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-bottom-style: July;
  }
}

@media April {
  .c0 {
    border-bottom-style: August;
  }
}

@media January {
  .c0 {
    border-bottom-style: September;
  }
}

@media April {
  .c0 {
    border-bottom-style: November;
  }
}

@media June {
  .c0 {
    border-bottom-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-bottom-style: July;
  }
}

@media April {
  .c0 {
    border-bottom-style: August;
  }
}

@media January {
  .c0 {
    border-bottom-style: September;
  }
}

@media April {
  .c0 {
    border-bottom-style: November;
  }
}

@media June {
  .c0 {
    border-bottom-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-style: January;
  }
}

@media April {
  .c0 {
    border-bottom-style: December;
  }
}

@media January {
  .c0 {
    border-bottom-style: April;
  }
}

@media April {
  .c0 {
    border-bottom-style: May;
  }
}

@media June {
  .c0 {
    border-bottom-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-style: January;
  }
}

@media April {
  .c0 {
    border-bottom-style: December;
  }
}

@media January {
  .c0 {
    border-bottom-style: April;
  }
}

@media April {
  .c0 {
    border-bottom-style: May;
  }
}

@media June {
  .c0 {
    border-bottom-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomStyle renders postitive number 1`] = `
Array [
  .c0 {
  border-bottom-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomStyle renders string 1`] = `
Array [
  .c0 {
  border-bottom-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomStyle renders valid theme path 1`] = `
Array [
  .c0 {
  border-bottom-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
